// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapSection component renders correctly 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class=" css-hz1pws"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          >
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1qs0h5e-MuiTypography-root"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock-child css-hz1pws"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","action":"tel:+4401234567890","label":"+44 (0) 1234567890"}"
                        data-testid="sitemap-link"
                        href="tel:+4401234567890"
                      >
                        +44 (0) 1234567890
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1qs0h5e-MuiTypography-root"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock-child css-hz1pws"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","action":"/landing-page/","label":"Our story"}"
                        data-testid="sitemap-link"
                        href="/landing-page"
                      >
                        Our story
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly 2 levels deep 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        >
          Main
        </h2>
        <div
          class=" css-hz1pws"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          >
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1qs0h5e-MuiTypography-root"
                  data-testid="typography"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock-child css-hz1pws"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","action":"tel:+4401234567890","label":"+44 (0) 1234567890"}"
                        data-testid="sitemap-link"
                        href="tel:+4401234567890"
                      >
                        +44 (0) 1234567890
                      </a>
                    </h6>
                    <div>
                      <h5
                        class="MuiTypography-root MuiTypography-h5 css-pzq1qb-MuiTypography-root"
                        data-testid="typography"
                      >
                        About BMI 2
                      </h5>
                      <div
                        class="SitemapBlock-child css-hz1pws"
                      >
                        <div>
                          <h6
                            class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                            data-testid="typography"
                          >
                            <a
                              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                              data-gtm="{"id":"cta-click1","action":"/landing-page/","label":"Our story"}"
                              data-testid="sitemap-link"
                              href="/landing-page"
                            >
                              Our story
                            </a>
                          </h6>
                          <div>
                            <h6
                              class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                              data-testid="typography"
                            >
                              About BMI 2
                            </h6>
                            <div
                              class="SitemapBlock-child css-hz1pws"
                            >
                              <div>
                                <h6
                                  class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                                  data-testid="typography"
                                >
                                  <a
                                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                                    data-gtm="{"id":"cta-click1","action":"/landing-page/","label":"Our story"}"
                                    data-testid="sitemap-link"
                                    href="/landing-page"
                                  >
                                    Our story
                                  </a>
                                </h6>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MasonryGrid-column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1qs0h5e-MuiTypography-root"
                  data-testid="typography"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock-child css-hz1pws"
                >
                  <div>
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-dwaw41-MuiTypography-root"
                      data-testid="typography"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1ogz5y4-MuiTypography-root-MuiLink-root"
                        data-gtm="{"id":"cta-click1","action":"/landing-page/","label":"Our story"}"
                        data-testid="sitemap-link"
                        href="/landing-page"
                      >
                        Our story
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly if incomplete 1`] = `
<div>
  <div
    class="Section-root css-10chrh8"
    data-testid="sitemap-section"
    id="site-map"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
          data-testid="typography"
        />
        <div
          class=" css-hz1pws"
        >
          <div
            class="MasonryGrid-root css-1a7a0ef"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
